# MPI_N_bodies

./: CMakeLists.txt  README.md  batch  main.cpp
